<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sjsu"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/preferenceText"
        android:layout_width="246dp"
        android:layout_height="53dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="44dp"
        android:text="@string/s2_activity_headline"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/preferenceImageView"
        android:layout_width="76dp"
        android:layout_height="68dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/s1_imagedesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/PreferenceSave"
        android:onClick="PreferenceSave"
        android:layout_width="153dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="100dp"
        android:background="#FBFB93"
        android:text="@string/s2_save"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/PreferenceCancel"
        android:onClick="PreferenceCancel"
        android:layout_width="153dp"
        android:layout_height="66dp"
        android:layout_marginEnd="32dp"
        android:background="#FBFB93"
        android:text="@string/s2_cancel"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/PreferenceSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/PreferenceSave" />

    <TextView
        android:id="@+id/textBookname"
        android:layout_width="151dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="176dp"
        android:text="@string/s2_bookname"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterBookname"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:maxLines="1"
        android:maxLength="70"
        app:layout_constraintBottom_toBottomOf="@+id/textBookname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textBookname"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/s2_enter_bookname" />


    <TextView
        android:id="@+id/textBookauthor"
        android:layout_width="151dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:text="@string/s2_bookauthor"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterBookauthor"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:maxLines="1"
        android:maxLength="70"
        app:layout_constraintBottom_toBottomOf="@+id/textBookauthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textBookauthor"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/s2_enter_bookauthor" />


    <TextView
        android:id="@+id/textDescription"
        android:layout_width="151dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:text="@string/s2_description"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterDescription"
        android:layout_width="212dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:maxLength="255"
        android:maxLines="4"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textDescription"
        app:layout_constraintVertical_bias="0.531"
        tools:text="@string/s2_enter_description" />


</android.support.constraint.ConstraintLayout>